<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Challenge Accepted</string>
    <string name="action_settings">Settings</string>
    <string name="title">Challenge Accepted</string>
    
    <string name="sign_up_or_join">Sign Up or Join</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    
    <string name="chall_name">Challenge Name</string>
    <string name="desc">Description</string>
    <string name="name">Name</string>
    <string name="bounty">Bounty</string>
    <string name="create">Create</string>
	
    <string name="add_button_desc">Add Challenge Button</string>
    <string name="view_button_desc">View Challenges Button</string>
    <string name="settings_button_desc">Settings Button</string>
</resources>
