<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >

    <TextView
        android:id="@+id/sign_up_or_join_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_or_join"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="24dp" />

    <EditText
        android:id="@+id/firstname_textview"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/lastname_textview"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/email_textview"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" >

        <requestFocus android:layout_width="match_parent" />

    </EditText>

    <EditText
        android:id="@+id/password_textview"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword" 
        android:layout_marginTop="10dp"
        android:padding="10dp" />
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@+string/login" />
        
        <Button
	        android:id="@+id/create_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:text="@+string/create" />
        
    </LinearLayout>
    

</LinearLayout>
